#
#	Changelog of Sandix
#
#	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
#
#	This program is free software; you can redistribute it and/or modify
#	it under the terms of the GNU General Public License as published by
#	the Free Software Foundation; either version 2 of the License, or
#	(at your option) any later version.
#
#	This program is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#
#	You should have received a copy of the GNU General Public License along
#	with this program; if not, write to the Free Software Foundation, Inc.,
#	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#

#	[+] = New
#	[M] = Modify		(Only Significant Modification)
#	[D] = Description	(Nothing but some memos)

Mon Sep  7 CST 2015
- [+] Diary/09-07-2015
- [+] lib/ctype.c
- [+] include/sandix/ctype.h
- [M] lib/vsprintf.c				[D] Various modifications


Tue Sep  8 CST 2015
- [+] Diary/09-08-2015
- [+] Changelog
- [+] lib/hexdump.c
- [+] include/asm/swab.h
- [+] include/sandix/swab.h
- [+] include/asm/byteorder.h
- [+] include/sandix/byteorder/generic.h
- [+] include/sandix/byteorder/big_endian.h
- [+] include/sandix/byteorder/little_endian.h
- [M] include/sandix/kernel.h			[D] Add declares of lib/hexdump.c
- [M] lib/vsprintf.c				[D] Add number, put_dec


Wed Sep  9 CST 2015
- [+] Diary/09-09-2015
- [+] Kbuild
- [+] crypto/
- [+] crypto/Kbuild
- [+] crypto/Makefile
- [+] crypto/md5.c