@@ -1,0 +1,15 @@
+#
+#	include/asm/README
+#
+#	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
+#
+#	BIG FAT NOTE:
+#
+#	This directory is dedicated to Intel-x86 Architecture.
+#	I know that x86 is only architecture Sandix support, and it is not
+#	necessary to seperate architecture dependent/independent header files.
+#	But we are not just building a runnable system, we are learning how to
+#	build a portable, runnable system. Therefore, in spite of the
+#	complexity, i choose to make such a architecture-dependent header file
+#	subdirectory, just like what Linux do.
+#
